--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@
   width: 99vw;
   z-index: 9998;
   top: 0;
+  opacity: 0.95;
 }
 .nav {
   display: flex;
@@ -26,22 +27,27 @@
 }
 .logo a {
   font-size: 1.8rem;
-  letter-spacing: 0.05rem;
   opacity: 0.7;
 }
-.links {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 1rem;
-}
-.bag,
-.search,
-.menu {
-  height: 1.5rem;
-  opacity: 0.7;
-}
-.bag {
+
+.nav__user-img {
   height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+.menu {
+  display: flex;
+  flex-direction: column;
+  vertical-align: middle;
+}
+.menu a {
+  font-size: 1rem;
+  vertical-align: middle;
+  opacity: 0.7;
+}
+.nav__el--logout {
+  cursor: pointer;
 }
 
 /************ HAMBURGER MENU ************/
@@ -171,7 +177,6 @@
 }
 .footer__logo a {
   font-size: 1.8rem;
-  letter-spacing: 0.05rem;
 }
 
 .footer__nav {
@@ -190,7 +195,6 @@
 .footer__copyright {
   font-size: 0.85rem;
   text-align: center;
-  letter-spacing: 0.05rem;
   padding-top: 1rem;
 }
 /************ CAROUSEL ************/
@@ -277,8 +281,6 @@
 }
 
 /************ REVIEWS ************/
-.reviewing {
-}
 .review__title {
   font-size: 2rem;
 }
@@ -286,13 +288,8 @@
 .overall {
   padding: 2rem;
 }
-.overall__general {
-}
-
 .overall__average {
   font-size: 2rem;
-}
-.overall__quantity {
 }
 
 .reviews {
@@ -504,4 +501,43 @@
   background-color: #000000;
 }
 
-/************ LOG OUT ************/
+/************ ACCOUNT ************/
+
+.user-view {
+  background-color: #fff;
+  max-width: 120rem;
+  margin: 0 auto;
+  min-height: 100vh;
+  border-radius: 3px;
+  overflow: hidden;
+  -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.07);
+  box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.07);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.user-view__menu {
+  -webkit-box-flex: 32rem;
+  -ms-flex: 32rem 0 0px;
+  flex: 32rem 0 0;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#7dd56f),
+    to(#28b487)
+  );
+  background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
+  padding: 4rem 0;
+}
+.user-view__content {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  padding: 7rem 0;
+}
+.user-view__form-container {
+  max-width: 68rem;
+  margin: 0 auto;
+  padding: 0 8rem;
+}
