--- a/views/_header.pug
+++ b/views/_header.pug
@@ -4,11 +4,11 @@ header.header
             a(href='/') Primrose
         .menu
             if user
-                a.nav__el.nav__el--logout Sign out
-                a.nav__el(href='/me')
-                img.nav__user-img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
-                span= user.name.split(' ')[0]
+                .container
+                    a.nav__el(href='/me')
+                        img.nav__user-img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
+                        a.nav__el.nav__el--logout Sign out
             else 
-                a.nav__el(href='/login') Log in
+                a.nav__el(href='/login') Sign in
                 a.nav__el(href='/login') Sign up 
 
