Account Page Frontend

--- a/views/product.pug
+++ b/views/product.pug
@@ -48,9 +48,9 @@ block content
         .divider 
             span= `Select size`
         .sizes
-            button= product.sizes[0]
-            button= product.sizes[1]
-            button= product.sizes[2]
+            button.btn--product= product.sizes[0]
+            button.btn--product= product.sizes[1]
+            button.btn--product= product.sizes[2]
 
     section.reviewing
         .overall
