--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,6 @@
   width: 99vw;
   z-index: 9998;
   top: 0;
-  opacity: 0.95;
 }
 .nav {
   display: flex;
@@ -26,7 +25,7 @@
   padding: 1rem;
 }
 .logo a {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   opacity: 0.7;
 }
 
@@ -44,7 +43,6 @@
 .menu a {
   font-size: 1rem;
   vertical-align: middle;
-  opacity: 0.7;
 }
 .nav__el--logout {
   cursor: pointer;
@@ -137,7 +135,7 @@
 .heading__box {
   display: flex;
   flex-direction: column;
-  margin-top: 6rem;
+  margin-top: 5rem;
   text-align: center;
 }
 .heading__name {
@@ -273,11 +271,14 @@
   justify-content: space-evenly;
   padding: 1rem;
 }
-.sizes button {
-  opacity: 0.7;
+.btn--product {
   height: 3rem;
   width: 3rem;
+  border-radius: 50%;
   cursor: pointer;
+  background-color: #000000;
+  color: #ffff;
+  opacity: 0.9;
 }
 
 /************ REVIEWS ************/
@@ -289,7 +290,7 @@
   padding: 2rem;
 }
 .overall__average {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 .reviews {
@@ -305,9 +306,7 @@
   width: 30rem;
   padding: 4rem;
   background-color: #f7f7f7;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+
   scroll-snap-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -323,7 +322,7 @@
 .reviews:before,
 .reviews:after {
   content: '';
-  width: 2rem;
+  width: 1rem;
 }
 .reviews__avatar {
   display: -webkit-box;
@@ -332,23 +331,19 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .reviews__avatar-img {
-  height: 4.5rem;
+  height: 2.5rem;
   border-radius: 50%;
-  margin-right: 1.5rem;
+  margin-right: 1rem;
 }
 .reviews__user {
   font-size: 1.5rem;
-  font-weight: 700;
   text-transform: uppercase;
 }
 .reviews__text {
-  font-size: 1.5rem;
-  margin-bottom: 2rem;
-  font-style: italic;
-  font-weight: 400;
+  margin-bottom: 1rem;
 }
 .reviews__rating {
   margin-top: auto;
@@ -357,8 +352,8 @@
   display: flex;
 }
 .reviews__star {
-  height: 2rem;
-  width: 2rem;
+  height: 1rem;
+  width: 1rem;
   margin-right: 1px;
 }
 .reviews__star--active {
@@ -376,14 +371,14 @@
 .form__input {
   display: block;
   font-family: inherit;
-  font-size: 1.25rem;
+  font-size: 1rem;
   color: inherit;
-  padding: 1.25rem 1.75rem;
+  padding: 1.05rem 1.55rem;
   border: none;
   width: 100%;
   background-color: #f2f2f2;
-  border-top: 3px solid transparent;
-  border-bottom: 3px solid transparent;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   -webkit-box-sizing: border-box;
@@ -503,41 +498,53 @@
 
 /************ ACCOUNT ************/
 
-.user-view {
-  background-color: #fff;
-  max-width: 120rem;
-  margin: 0 auto;
-  min-height: 100vh;
-  border-radius: 3px;
-  overflow: hidden;
-  -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.07);
-  box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.07);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
 .user-view__menu {
-  -webkit-box-flex: 32rem;
-  -ms-flex: 32rem 0 0px;
-  flex: 32rem 0 0;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right bottom,
-    from(#7dd56f),
-    to(#28b487)
-  );
-  background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
+  -webkit-box-flex: 10rem;
+  -ms-flex: 10rem 0 0px;
+  flex: 10rem 0 0;
   padding: 4rem 0;
 }
 .user-view__content {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  padding: 7rem 0;
+  padding: 5rem 0;
 }
-.user-view__form-container {
-  max-width: 68rem;
-  margin: 0 auto;
-  padding: 0 8rem;
+.form__user-photo-account {
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.intro__account {
+  display: flex;
+  justify-content: center;
+}
+.form__edit {
+}
+
+.main {
+  display: flex;
+}
+
+.account__icons {
+  height: 1.25rem;
+  width: 1.25rem;
+  padding: 0 1rem 0 0;
+}
+.side-nav {
+  padding: 1rem;
+}
+.sider-nav {
+  padding: 1rem 0;
+}
+.btn-text {
+  margin-right: 1rem;
+}
+.btn--small {
+  background-color: #000000;
+  color: #ffff;
+  font-size: 1rem;
+  padding: 1rem;
 }
