--- a/views/account.pug
+++ b/views/account.pug
@@ -3,7 +3,7 @@ extend base
 mixin navItem(link, text, icon, active)
   li(class=`${active ? 'side-nav--active' : ''}`)
     a(href=`${link}`)
-      svg
+      svg.account__icons
         use(xlink:href=`img/icons/icons.svg#icon-${icon}`)
       | #{text}
 
@@ -12,54 +12,63 @@ block content
         .user-view
         nav.user-view__menu
             ul.side-nav
-            +navItem('#', 'Settings', 'settings', true)
-            +navItem('#', 'My bookings', 'briefcase')
-            +navItem('#', 'My reviews', 'star')
-            +navItem('#', 'Billing', 'credit-card')
+              li.sider-nav
+                +navItem('#', ' Settings', 'settings', true)
+              li.sider-nav
+                +navItem('#', ' Purchases', 'briefcase')
+              li.sider-nav
+                +navItem('#', ' Reviews', 'star')
+              li.sider-nav
+                +navItem('#', ' Billing', 'credit-card')
 
             - if (user.role === 'admin')
             .admin-nav
-                h5.admin-nav__heading Admin
+                h5.admin-nav__heading
                 ul.side-nav
-                +navItem('#', 'Manage tours', 'map')
-                +navItem('#', 'Manage users', 'users')
-                +navItem('#', 'Manage reviews', 'star')
-                +navItem('#', 'Manage bookings', 'briefcase')
+                  li.sider-nav
+                    +navItem('#', ' Products', 'map')
+                  li.sider-nav
+                    +navItem('#', ' Users', 'users')
+                  li.sider-nav
+                    +navItem('#', ' Reviews', 'star')
+                  li.sider-nav
+                    +navItem('#', ' Purchases', 'briefcase')
 
         .user-view__content
             .user-view__form-container
-            h2.heading-secondary.ma-bt-md Your account settings
+            h2.heading-secondary.ma-bt-md
             
             //- WITHOUT API
             //- form.form.form-user-data(action='/submit-user-data' method='POST')
             
             //- WITH API
             form.form.form-user-data
-                .form__group
-                label.form__label(for='name') Name
-                input#name.form__input(type='text', value=`${user.name}`, required, name='name')
-                .form__group.ma-bt-md
-                label.form__label(for='email') Email address
-                input#email.form__input(type='email', value=`${user.email}`, required, name='email')
-                .form__group.form__photo-upload
-                img.form__user-photo(src=`/img/users/${user.photo}`, alt='User photo')
-                a.btn-text(href='') Choose new photo
-                .form__group.right
-                button.btn.btn--small.btn--green Save settings
+              .intro__account
+                img.form__user-photo-account(src=`/img/users/${user.photo}`, alt='User photo')
+                a.btn-text(href='') Edit
+
+              .form__group
+              label.form__label__pass(for='name') Name
+              input#name.form__input(type='text', value=`${user.name}`, required, name='name')
+              .form__group.ma-bt-md
+              label.form__label__pass(for='email') Email
+              input#email.form__input(type='email', value=`${user.email}`, required, name='email')
+              .form__group.form__photo-upload
+              .form__group.right
+              button.btn.btn--small.btn--green Save new name/email
                 
             .line &nbsp;
             
             .user-view__form-container
-            h2.heading-secondary.ma-bt-md Password change
             form.form.form-user-password
                 .form__group
-                label.form__label(for='password-current') Current password
+                label.form__label__pass(for='password-current') Current password
                 input#password-current.form__input(type='password', placeholder='••••••••', required, minlength='8')
                 .form__group
-                label.form__label(for='password') New password
+                label.form__label__pass(for='password') New password
                 input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
                 .form__group.ma-bt-lg
-                label.form__label(for='password-confirm') Confirm password
+                label.form__label__pass(for='password-confirm') Confirm password
                 input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
                 .form__group.right
-                button.btn.btn--small.btn--green.btn--save-password Save password
+                button.btn.btn--small.btn--green.btn--save-password Save new password
