--- a/views/account.pug
+++ b/views/account.pug
@@ -39,13 +39,15 @@ block content
             h2.heading-secondary.ma-bt-md
             
             //- WITHOUT API
-            //- form.form.form-user-data(action='/submit-user-data' method='POST')
+            //- form.form.form-user-data(action='/submit-user-data' method='POST' enctype='multipart/form-data')
             
             //- WITH API
             form.form.form-user-data
               .intro__account
                 img.form__user-photo-account(src=`/img/users/${user.photo}`, alt='User photo')
-                a.btn-text(href='') Edit
+                
+                input(type='file', accept='image/*', id='photo', name='photo')
+                label(for='photo') edit photo
 
               .form__group
               label.form__label__pass(for='name') Name
