--- a/views/emails/baseEmail.pug
+++ b/views/emails/baseEmail.pug
@@ -8,7 +8,7 @@ html
             meta(name='viewport', content='width=device-width')
             meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
             title= subject
-        //- include _style
+        include _style
 
   body
     table.body(role='presentation', border='0', cellpadding='0', cellspacing='0')
