--- a/views/product.pug
+++ b/views/product.pug
@@ -1,5 +1,8 @@
 extends base
 
+block append head   
+    script(src='https://js.stripe.com/v3/')
+
 mixin reviewCard(review)
     .reviews__card
         .reviews__avatar 
@@ -43,6 +46,12 @@ block content
     section.about
         .price
             span= `$${product.price}`
+
+        if user 
+            button.btn.btn--green.span-all-rows#book-product(data-product-id=`${product.id}`) Purchase
+        else
+            a.btn.btn--green.span-all-rows(href='/login') Log in to purchase
+
         .description 
             span.desc= product.description
         .divider 
@@ -63,6 +72,8 @@ block content
         .reviews
             each review in product.reviews
                 +reviewCard(review)
+
+
 
 
 
