Render user purchases

--- a/views/account.pug
+++ b/views/account.pug
@@ -15,7 +15,7 @@ block content
               li.sider-nav
                 +navItem('#', ' Settings', 'settings', true)
               li.sider-nav
-                +navItem('#', ' Purchases', 'briefcase')
+                +navItem('/my-products', ' Purchases', 'briefcase')
               li.sider-nav
                 +navItem('#', ' Reviews', 'star')
               li.sider-nav
