Ready for FIRST DEPLOYMENT🚀

--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,7 +1,7 @@
 header.header
     nav.nav
         .logo
-            a(href='/') Primrose
+            a(href='/') Dk Store
         .menu
             if user
                 .container
