--- a/views/_header.pug
+++ b/views/_header.pug
@@ -10,5 +10,5 @@ header.header
                         a.nav__el.nav__el--logout Sign out
             else 
                 a.nav__el(href='/login') Sign in
-                a.nav__el(href='/login') Sign up 
+                a.nav__el(href='/signup') Sign up 
 
